Edited system/etc/batt.conf via GitHub

--- a/system/etc/batt.conf
+++ b/system/etc/batt.conf
@@ -1,15 +1,21 @@
-MOUNToptions=1
+audio_fix=0
+CFStweaks=0
+MOUNToptions=0
 enabled=1
+MaxTempEnable=n
+MaxFreqOverride=800000
+MinFreqOverride=200000
+MaxTemp=450
 cpu_limiting_method=1
 min_freq_on_battery=200000
-max_freq_on_battery=800000
+max_freq_on_battery=80000
 min_freq_on_USBpower=200000
 max_freq_on_USBpower=800000
 min_freq_on_power=200000
 max_freq_on_power=800000
-polling_interval_on_battery=90
+polling_interval_on_battery=60
 polling_interval_on_power=15
 polling_interval_on_USBpower=15
-cpu_max_underclock_perc=33
-#scaling_governor=interactive
-#cpu_scheduler=deadline
+cpu_max_underclock_perc=33 
+scaling_governor=smartass
+cpu_scheduler=noop
