Kang'd Decad3nce's heroc script for the most up to date version

--- a/system/etc/batt.conf
+++ b/system/etc/batt.conf
@@ -1,21 +1,21 @@
 audio_fix=0
 CFStweaks=0
-MOUNToptions=0
+MOUNToptions=1
 enabled=1
 MaxTempEnable=n
-MaxFreqOverride=600000
-MinFreqOverride=200000
-MaxTemp=400
+MaxFreqOverride=537600
+MinFreqOverride=245760
+MaxTemp=450
 cpu_limiting_method=1
-min_freq_on_battery=200000
-max_freq_on_battery=80000
-min_freq_on_USBpower=200000
-max_freq_on_USBpower=800000
-min_freq_on_power=200000
-max_freq_on_power=800000
-polling_interval_on_battery=90
+min_freq_on_battery=245760
+max_freq_on_battery=691200
+min_freq_on_USBpower=245760
+max_freq_on_USBpower=691200
+min_freq_on_power=245760
+max_freq_on_power=691200
+polling_interval_on_battery=60
 polling_interval_on_power=15
 polling_interval_on_USBpower=15
-cpu_max_underclock_perc=58 
-scaling_governor=smartass
-cpu_scheduler=noop
+cpu_max_underclock_perc=15
+scaling_governor=interactive
+cpu_scheduler=deadline
