Trying to bring it to the SGS3 Still needs work

--- a/system/etc/batt.conf
+++ b/system/etc/batt.conf
@@ -1,21 +1,18 @@
-audio_fix=0
-CFStweaks=0
-MOUNToptions=0
 enabled=1
 MaxTempEnable=n
-MaxFreqOverride=600000
-MinFreqOverride=200000
-MaxTemp=400
+MaxFreqOverride=1026000
+MinFreqOverride=384000
+MaxTemp=470
 cpu_limiting_method=1
-min_freq_on_battery=200000
-max_freq_on_battery=80000
-min_freq_on_USBpower=200000
-max_freq_on_USBpower=800000
-min_freq_on_power=200000
-max_freq_on_power=800000
-polling_interval_on_battery=90
+min_freq_on_battery=384000
+max_freq_on_battery=1512000
+min_freq_on_USBpower=384000
+max_freq_on_USBpower=1512000
+min_freq_on_power=384000
+max_freq_on_power=1512000
+polling_interval_on_battery=120
 polling_interval_on_power=15
 polling_interval_on_USBpower=15
 cpu_max_underclock_perc=58 
-scaling_governor=smartass
-cpu_scheduler=noop
+scaling_governor=ondemand
+cpu_scheduler=cfs
